# try-agentic-llamaindex

./: .env  .gitignore  README.md  agent.py  classifier_system_prompt.txt  dummy_api.py  edit_system_prompt.txt  hasilmencoba.txt  main.py  models.py  pyproject.toml  system_prompt.txt
python/: agents.py  api.py  config.py  core.py  main.py  models.py  tools.py  ui.py  utils.py
